--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ section#hero {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .hero-text {
@@ -118,11 +119,24 @@ section#hero {
     font-size: 3rem;
     font-weight: 900;
     margin-bottom: 2rem;
+    line-height: 3rem;
 }
 
 #hero p {
     font-size: 1.125rem;
     color: var(--hero-secondary-text);
+    margin-bottom: 2rem;
+    line-height: 1.25rem;
+}
+
+#hero button {
+    background-color: var(--button-color);
+    padding: 1rem 1rem;
+    border: 0;
+    border-radius: 1rem;
+    color: var(--hero-text);
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .hero-img {
