--- a/styles.css
+++ b/styles.css
@@ -130,13 +130,16 @@ section#hero {
 }
 
 #hero button {
-    background-color: var(--button-color);
-    padding: 1rem 1rem;
+    display: inline-block;
+    background: var(--button-color);
     border: 0;
     border-radius: 1rem;
     color: var(--hero-text);
     font-weight: 700;
     cursor: pointer;
+    width: 10rem;
+    padding: 0.25rem 2rem;
+    margin-bottom: 2rem;
 }
 
 .hero-img {
