--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,30 @@ section#hero {
 .hero-img img {
     border-radius: 2rem;
 }
+
+section#featured {
+    padding: 5rem;
+    color: var(--features-text);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#featured h2 {
+    font-weight: 700;
+    font-size: 2.25rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+#featured .card {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
