--- a/styles.css
+++ b/styles.css
@@ -160,11 +160,12 @@ section#featured {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 #featured h2 {
     margin-top: 5rem;
+    margin-bottom: 5rem;
     font-weight: 700;
     font-size: 2.25rem;
     display: flex;
@@ -172,7 +173,6 @@ section#featured {
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    margin-bottom: 2rem;
 }
 
 #featured .card {
@@ -287,21 +287,31 @@ section#cta {
 
 
 #cta .calltoaction button{
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 0.5;
+    display: inline-block;
     background: var(--button-color);
+    border: 2px var(--hero-text) solid;
+    border-radius: 1rem;
     color: var(--hero-text);
     font-weight: 700;
-    border-radius: 1.5rem;
-    border: .15rem var(--hero-text) solid;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .25rem;
-    padding-bottom: .25rem;
+    cursor: pointer;
+    width: 10rem;
+    padding: 0.25rem 2rem;
 }
 
 #cta .calltoaction button:hover{
     cursor: pointer;
+}
+
+#footer {
+    background: var(--dark-bg-color);
+    color: var(--hero-secondary-text);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+#footer p:before {
+    content: "Copyright \00a9 "
 }
